Commando: Fix load position (stop results from jumping a few pixels)
(integrated from master branch change 97bd515 by Nathan Rijksen <n.rijksen@gmail.com>)

--- a/src/modules/commando/skin/commando.less
+++ b/src/modules/commando/skin/commando.less
@@ -70,7 +70,7 @@
         width: 100%;
         opacity: 0;
         transition: opacity 0.2s linear;
-        visibility: collapse;
+        visibility: hidden;
     }
 
     &:not(.kitt) #commando-loader
@@ -82,7 +82,7 @@
 
     &.kitt #commando-loader
     {
-        background-image: linear-gradient(to right, rgba(0,0,0,0.0) 0, rgba(255, 0, 0, 0.4) 200px, rgba(255, 0, 0, 0.4) 300px, rgba(0,0,0,0.0) 500px) !important;
+        background-image: linear-gradient(to right, rgba(0,0,0,0.0) 0, rgba(225, 50, 50, 0.9) 200px, rgba(225, 50, 50, 0.9) 300px, rgba(0,0,0,0.0) 500px) !important;
         background-repeat: no-repeat;
         animation: loading 1s infinite cubic-bezier(1.0, 0.3, 0.5, 1.0);
     }
